--- a/Cliente/src/assets/style/TableSearch.css
+++ b/Cliente/src/assets/style/TableSearch.css
@@ -1,22 +1,21 @@
-/* styles.css */
-
 .data-table th h1 {
     font-weight: bold;
     font-size: 1em;
-    text-align: left;
+    text-align: center; /* Cambiado de left a center */
     color: #a9b1a8;
 }
 
 .data-table td {
     font-weight: normal;
     font-size: 1em;
+    text-align: center; /* Añadido para centrar el texto */
     -webkit-box-shadow: 0 2px 2px -2px #0E1119;
     -moz-box-shadow: 0 2px 2px -2px #0E1119;
     box-shadow: 0 2px 2px -2px #0E1119;
 }
 
 .data-table {
-    text-align: left;
+    text-align: center; /* Cambiado de left a center */
     overflow: hidden;
     width: 50vw;
     margin: 0 auto;
@@ -89,7 +88,7 @@
     justify-content: center;
 }
   
-  .input {
+.input {
     height: 100%;
     line-height: 28px;
     padding: 0 1rem;
@@ -100,9 +99,10 @@
     outline: none;
     background-color: #D9E8D8;
     color: #0d0c22;
+    text-align: center; /* Añadido para centrar el texto */
     box-shadow: 0 0 5px #C1D9BF, 0 0 0 10px #f5f5f5eb;
     transition: .3s ease;
-  }
+}
   
   .input::placeholder {
     color: #777;
